# MyIde

./: CMakeLists.txt
src/: CMakeLists.txt  dialog_output.cpp  dialog_output.h  main.cpp
src/app/: CMakeLists.txt  dialog_output.cpp  dialog_output.h  dialog_output.ui  main.cpp
src/compiler_processes/: CMakeLists.txt  find_compilers.cpp  find_compilers.hpp  find_fileinfos.cpp  find_fileinfos.hpp  processlauncher.cpp  processlauncher.h
src/libtmp/: CMakeLists.txt
src/project/: CMakeLists.txt  json_project.cpp  json_project.h
src/tests/: CMakeLists.txt  dummy_test.cpp
